--- a/UI2/templates/Login.html
+++ b/UI2/templates/Login.html
@@ -5,8 +5,8 @@
     <title>Adobe Experience Manager - Login Page</title>
     <!-- Ignored vulnerability while scanning, 
 	Use a relative path for the image file to make the code more portable -->
-     <img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/AEM_Icon.png" alt="AEM Icon" height="250" width="500" />
-     
+     <img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/web_Icon.png" alt="AEM Icon" height="250" width="500" />
+     <H1>Empowerio</H1>
 	 <link rel="stylesheet" href="style.css">
 </head>
 <body>
