--- a/UI2/templates/Login.html
+++ b/UI2/templates/Login.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Adobe Experience Manager - Login Page</title>
+    <title>Empowerio - Login Page</title>
     <!-- Ignored vulnerability while scanning, 
 	Use a relative path for the image file to make the code more portable -->
-     <img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/web_Icon.png" alt="AEM Icon" height="250" width="500" />
-     <H1>Empowerio</H1>
+     <img src="https://raw.githubusercontent.com/shamreennus/PDT_TEST_UI_2/master/UI2/templates/web_icon.png" 
+	 alt="Empowerio Icon" height="300" width="500" />
+     <H1>Empower.IO</H1>
+
 	 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +26,7 @@
 	     make sure that each HTML page contains an element with configured ID,
 		 design requires a placeholder to be present in each page,dynamically insert a footer-->
     <div>
-        <h1>Login</h1>		
+        <h2>Login</h2>		
 		
 		{% if info %}
 		<div id='testprod' style='color:red;'>{{ info }}</div>
