--- a/UI2/templates/Home.html
+++ b/UI2/templates/Home.html
@@ -93,6 +93,28 @@
 		  font-size: 14px;
 		  font-weight: bold;
 		}	
+		
+		
+		
+		h1 {
+			color: #008000; /* set the color to green */
+		}
+		
+		div {
+	background-color: #fff; /* set the background color of the content area to white */
+	padding: 20px; /* add some padding to the content area */
+	margin: 20px; /* add some margin to the content area */
+	box-shadow: 0 0 10px rgba(0,0,0,0.1); /* add a box shadow to the content area */
+}
+body {
+	background-color: #f2f2f2; /* set the background color to light gray */
+	font-family: Arial, sans-serif; /* set the font family */
+	font-size: 16px; /* set the font size */
+	line-height: 1.5; /* set the line height */
+	margin: 0; /* remove default margin */
+	padding: 0; /* remove default padding */
+}
+		
 
 	</style>
 	
@@ -117,9 +139,17 @@
 </head>
 <body>
 	
-	<h1 class="right">Welcome <strong class="str">{{name}}!</strong></h1>
-	<img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/AEM_Icon.png" 
-		alt="AEM Icon" height="90" width="200">
+	<h2 class="right">Welcome <strong class="str">{{name}}!</strong></h2>
+	
+	
+	<img src="https://raw.githubusercontent.com/shamreennus/PDT_TEST_UI_2/master/UI2/templates/web_icon.png" 
+	 alt="Empowerio Icon" height="300" width="500" />
+     <H1>Empower.IO</H1>
+	 
+	 
+	<!--img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/AEM_Icon.png" 
+		alt="AEM Icon" height="90" width="200"-->
+		
 	<br/> <hr/>	
 	<a class="btn right" href="/{{ link }}">Logout</a>
 	
