--- a/UI2/templates/Form_login.html
+++ b/UI2/templates/Form_login.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <title>Adobe Experience Manager - Login Page</title>
+    <title>EMPOWERIO</title>
     <!-- Ignored vulnerability while scanning, 
 	Use a relative path for the image file to make the code more portable -->
-     <img src="https://raw.githubusercontent.com/shamreennus/PDT_Test_1/master/UI/HTML_CSS_JSP/AEM_Icon.png" alt="AEM Icon" height="250" width="500" />
+    
+	 <img src="https://raw.githubusercontent.com/shamreennus/PDT_TEST_UI_2/master/UI2/templates/web_icon.png" 
+	 alt="Empowerio Icon" height="250" width="500" />
      
 	 <link rel="stylesheet" href="style.css">
 </head>
